# app_vector

./: .env  Dockerfile  alembic.ini  compose.yml  env  pyproject.toml
app/: config.py  database.py  main.py  models.py  schemas.py  security.py  utils.py
app/routers/: user.py
app/services/: database.py  security.py
docs/docs/: index.md
migrations/versions/: b3270cae8ea2_alter_columns_to_timestamp_with_time_.py
tests/: #test_user.py  test_test.py
